--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "ts:check": "tsc"
   },
   "dependencies": {
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-file-system": "~15.4.4",
+    "expo-image": "~1.3.5",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/node": "^20.9.0",
+    "axios": "^1.6.1",
+    "expo-device": "^5.6.0",
+    "expo-image-picker": "^14.5.0",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
